<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:title="@string/discount_calculator"
        style="@style/ThemeOverlay.MaterialComponents.Toolbar.Surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/price"
        app:layout_constraintBottom_toTopOf="@id/textfield_discount"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:prefixText="Rp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            tools:text="10000" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/discount"
        app:layout_constraintBottom_toTopOf="@id/btn_count"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_discount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:suffixText="%"
        tools:layout_editor_absoluteY="201dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:selectAllOnFocus="true"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            tools:text="1000" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_discount"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryContainer"
        app:icon="@android:drawable/ic_input_add"
        app:iconTint="@color/onPrimaryContainer"
        app:layout_constraintBottom_toTopOf="@id/btn_count"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textfield_discount"
        app:layout_constraintTop_toTopOf="@id/textfield_discount"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_count"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginVertical="16dp"
        android:text="@string/count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="@id/guideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_discount"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/textfield_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:listitem="@layout/item_discount" />


</androidx.constraintlayout.widget.ConstraintLayout>